--- a/components/footer.css
+++ b/components/footer.css
@@ -4,6 +4,7 @@
     padding: 50px 0;
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
+    margin-top: 120px;
 }
 .footer-wrapper {
     width: 100%;
