--- a/pages/index.css
+++ b/pages/index.css
@@ -447,6 +447,9 @@ height: 100%;
 }
 
 @media (max-width: 769px) {
+    .main-content-models-item-text h3{
+        font-size: 24px;
+    }
     .logo{
         width: 70px;
     }
@@ -494,3 +497,24 @@ height: 100%;
         width: 100%;
     }
 }
+@media (max-width: 581px) {
+    .main-content-models-item-text {
+        width: 100%;
+        display: flex
+    ;
+        justify-content: center;
+        margin-top: 100px;
+        flex-wrap: wrap;
+        /* flex-direction: column; */
+        gap: 40px;
+    }
+    .main-content-model h3 {
+        font-size: 26px;
+    }
+    .main-content-models-item{
+        width: 100%;
+    }
+    .main-content-market-item{
+        width: 100%;
+    }
+    }
