--- a/pages/index.css
+++ b/pages/index.css
@@ -62,6 +62,7 @@
 }
 
 .main-content-models-item {
+    text-decoration: none;
     position: relative;
     display: flex;
     align-items: end;
@@ -71,11 +72,15 @@
     height: 430px;
     padding: 15px 25px;
     overflow: hidden;
+    transition: all 300ms;
+    cursor: pointer;
     -webkit-box-shadow: 0px -100px 85px 0px rgba(0, 0, 0, 0.27) inset;
     -moz-box-shadow: 0px -100px 85px 0px rgba(0, 0, 0, 0.27) inset;
     box-shadow: 0px -100px 85px 0px rgba(0, 0, 0, 0.27) inset;
 }
-
+.main-content-models-item:hover {
+    box-shadow: 0px -100px 138px 0px rgb(0 0 0) inset;
+}
 .main-content-models-item img {
     position: absolute;
     top: 0;
@@ -241,6 +246,7 @@ height: 100%;
 .main-content-models-item-link {
     text-align: center;
     margin: 0 auto;
+    text-decoration: none;
 
     margin-top: 100px;
     font-weight: 600;
