--- a/pages/index.css
+++ b/pages/index.css
@@ -199,6 +199,8 @@ height: 100%;
     color: #000;
     background: #fff;
     width: 100%;
+    text-decoration: none;
+
     padding: 15px;
     text-align: center;
     cursor: pointer;
