--- a/pages/model-more.css
+++ b/pages/model-more.css
@@ -439,18 +439,101 @@
 }
 
 
+.hybrid-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 120px;
+    background: #f9f9f9;
+}
+
+.hybrid-section h2 {
+    text-align: center;
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 12px;
+}
+
+.subtitle {
+    text-align: center;
+    font-size: 16px;
+    max-width: 960px;
+    margin: 0 auto 40px auto;
+    color: #333;
+}
+
+.hybrid-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 60px;
+    flex-wrap: wrap;
+}
+
+.hybrid-row.reverse {
+    flex-direction: row-reverse;
+}
+
+.hybrid-image{
+    width: 59%;
+    height: 310px;
+
+}
+.hybrid-image img {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.hybrid-text {
+    background: #C9C9C9;
+    height: 310px;
+
+    border-radius: 20px;
+    padding: 30px;
+    color: white;
+    width: 39%;
+}
+
+.hybrid-text h3 {
+    font-size: 20px;
+    margin: 0;
+
+    margin-bottom: 12px;
+}
+
+.hybrid-text p {
+    font-size: 15px;
+    margin: 0;
+
+    line-height: 1.6;
+}
+
+
 @media (max-width: 769px) {
     .smart-driving-content img {
         width: 100%;
 
     }
-
+    .hybrid-text h3{
+        font-size: 18px;
+    }
     .safety-main img,
     .safety-feature img {
         width: 100%;
 
     }
-
+    .hybrid-row{
+        gap: 30px;
+        flex-direction: column;
+    }
+    .hybrid-text{
+        width: 100%;
+    }
+    .hybrid-image{
+        width: 100%;
+    }
     .safety-text-block {
         width: 100%;
     }
@@ -489,6 +572,9 @@
     }
 }
 @media (max-width: 577px) {
+    .video-grid{
+        gap: 10px;
+    }
 
     .model-more-config-item{
         width: 100%;
@@ -506,10 +592,10 @@
         width: 100%;
     }
     .video-card:nth-child(2n) {
-        width: 47%;
+        width: 48%;
     }
     .video-card:nth-child(3n) {
-        width: 47%;
+        width: 48%;
     }
     .video-card:nth-child(4n) {
         width: 100%;
