--- a/pages/index.css
+++ b/pages/index.css
@@ -332,6 +332,7 @@ height: 100%;
 }
 .main-content-market-item a{
     text-align: center;
+    text-decoration: none;
     font-weight: 600;
     font-size: 18px;
     color: #fff;
