--- a/pages/index.css
+++ b/pages/index.css
@@ -303,7 +303,8 @@ height: 100%;
 .main-content-market-item{
     width: 30%;
     display: flex;
-    height: 478px;
+    height: 520px;
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
     background: #fff;
@@ -487,7 +488,7 @@ height: 100%;
         font-size: 18px;
     }
     .main-content-market-item{
-        height: 398px;
+        height: max-content;
         width: 48%;
     }
     .main-content-contact-wrapper{
@@ -529,6 +530,13 @@ height: 100%;
         width: 100%;
     }
     .main-content-market-item{
+        width: 100%;
+    }
+    .main-content-contact-left-info{
+        flex-direction: column;
+        gap: 40px;
+    }
+    .main-content-contact-left-info-item{
         width: 100%;
     }
     }
