--- a/pages/index.css
+++ b/pages/index.css
@@ -23,6 +23,7 @@
     width: 100%;
     z-index: 1;
 
+    height: auto;
 }
 
 .main-header-img1 {
@@ -59,6 +60,11 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+.main-content-model h2{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-content-models-item {
@@ -234,6 +240,7 @@ height: 100%;
 .main-content-model img {
     width: 100%;
     margin-top: 100px;
+    height: auto;
 }
 .main-content-model-content{
     display: flex;
@@ -440,6 +447,7 @@ height: 100%;
 }
 .main-content-about-wrapper img{
     width: 29%;
+    height: auto;
 }
 .main-content-about-text{
     width: 68%;
